samples/_failures_safe/1761321690_1d2fec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9c981274.c: In function ‘main’:
./samples/SAFE/__tmp_9c981274.c:175:5: error: expected expression at end of input
  175 |     printf("Unique words: %d\n",
      |     ^~~~~~
./samples/SAFE/__tmp_9c981274.c:175:5: error: expected declaration or statement at end of input
